# Agentic-Canon

./: .buildinfo  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  ADR-ISSUE-MANAGEMENT-IMPLEMENTATION.md  AGENT-docs-job.md  Agentic_Canon.md  BIBLE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLETION-SUMMARY.md  CONTRIBUTING.md  CONVENTIONS.md  DIFFS.md  DIRECTORY_STRUCTURE.md  DOCUMENT_ALIGNMENT.md  FINAL PHASE IMPLEMENTATIONS.md  FRAMEWORK.md  FRAMEWORK_SUMMARY.md  FRONTIERS-PR-DRAFT.md  Frontier Arbitration Layer  Frontier Base Layer.md  GAP_ANALYSIS_REPORT.md  IMPLEMENTATION-2025-10-12.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  INSTRUCTIONS.md  INVESTIGATION-REPORT.md  LICENSE  Makefile  Next_Steps.md  PLANNING-HUMANEVAL.md  PROBLEMS.md  PROJECT_MANAGEMENT.md  PROJECT_MANAGEMENT_IMPLEMENTATION.md  PROJECT_MANAGEMENT_QUICKREF.md  QUALITY_STANDARDS.md  (+51 more)
.dev/: README.md  bootstrap-codex-runner.sh  sanity-check.sh  trunk-with-progress.sh  validate-templates.sh
.dev/scripts/: README.md  create-adr.sh  (+2 more)
.devcontainer/: devcontainer.json
.github/: LABELS.md  PULL_REQUEST_TEMPLATE.md  TASKS-ADR-SYNC-QUICKREF.md  copilot-instructions.md
.trunk/: trunk.yaml
_sources/: sbom-workflow.md  semgrep-ruleset.md
agentic_canon_cli/: README.md  __init__.py  __main__.py  cli.py
applications/: README.md
docs/: CATALOG.md  CI-RATE-LIMITING.md  ISSUE_MANAGEMENT.md  README.md  TASKS-ADR-SYNC.md  VALIDATION-GUIDE.md  _config.yml  _toc.yml  dev-environments.md  dev-experience-roadmap.md  feature-flags.md  index.md  intro.md  sbom-workflow.md
docs_legacy/: _config.yml  _toc.yml  dev-experience-roadmap.md
examples/: README.md
examples/projects/fastapi-user-service/: .gitignore  .pre-commit-config.yaml  EXAMPLE-README.md  README.md  pyproject.toml
examples/projects/fastapi-user-service/.github/workflows/: ci.yml  docs.yml  security.yml
examples/projects/fastapi-user-service/docs/: _config.yml  _toc.yml  intro.md
examples/projects/fastapi-user-service/notebooks/: 01_bootstrap.ipynb
examples/projects/fastapi-user-service/src/acme_service/: __init__.py  database.py  main.py  models.py  security.py
examples/projects/fastapi-user-service/tests/: test_api.py  test_smoke.py
frontiers/: quality-gate.yml
n00_frontiers_cli/: README.md  cli.py  pip_support.py
notebooks/: 01_bootstrap.html  01_bootstrap.ipynb  02_security_supply_chain.html  02_security_supply_chain.ipynb  03_contracts_and_tests.html  03_contracts_and_tests.ipynb  04_observability_slos.html  04_observability_slos.ipynb  05_docs_to_book.html  05_docs_to_book.ipynb  README.md
runbooks/: README.md  agent-automation-runbook.md  agent-runbook.json  deployment-runbook.md  incident-response-runbook.md  template-creation-runbook.md
templates/: README.md  manifest.json  manifest.yaml
templates/python-service/{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
templates/python-service/{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  docs.yml  security.yml
templates/python-service/{{cookiecutter.project_slug}}/docs/: _config.yml  _toc.yml  intro.md
templates/python-service/{{cookiecutter.project_slug}}/notebooks/: 01_bootstrap.ipynb
templates/python-service/{{cookiecutter.project_slug}}/src/{{cookiecutter.pkg_name}}/: __init__.py
templates/python-service/{{cookiecutter.project_slug}}/tests/: test_smoke.py
tests/: README.md  conftest.py  test-sync-workflows.js  test_cli_fix.py  test_cookiecutters.py  test_docs_build.py  test_manifest_sync.py  test_pip_support.py  test_python_template_integration.py  test_sanity_check.py  test_template_e2e.py  test_validate_templates_cli.py  test_validate_templates_script.py
tools/: check_waivers.py  validate_frontmatter.py
(+405 files in other folders)
